<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Timeline</string>

    <string name="action_about">About</string>
    <string name="action_donate">Donate</string>
    <string name="action_minicards">Show minicards</string>
    <string name="action_reorder">Reorder</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_edit">Edit</string>
    <string name="action_open_drawer">Open drawer to select timelines to link</string>
    <string name="action_close_drawer">Close drawer</string>

    <string name="total_events">Total events: </string>

    <string name="donate_0">Nice job on the Lollipop update.</string>
    <string name="donate_1">Add linked timelines back.</string>
    <string name="donate_2">Please add a graphical timeline.</string>
    <string name="donate_3">Put it on the cloud already!</string>

    <string name="donate_amount_0">$1.00</string>
    <string name="donate_amount_1">$1.00</string>
    <string name="donate_amount_2">$1.00</string>
    <string name="donate_amount_3">$1.99</string>

    <string name="empty_timelines">No timelines found.</string>
    <string name="empty_events">No events found.</string>

    <string name="default_error_message">Sorry, but something went wrong.</string>
    <string name="error_select_new_image">Couldn\'t load that image. Please select a different one. If you continue to have problems, please try a different app to select the image.</string>
    <string name="error_select_title">Please select a title first.</string>

    <string-array name="era_array">
        <item>BCE</item>
        <item>CE</item>
    </string-array>

</resources>
